--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "webpack-dev-server": "~3.11.0"
   },
