--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.3.17",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "~0.16.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -28,6 +29,7 @@
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
     "expo-web-browser": "~10.2.0",
+    "firebase": "^9.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
