--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dudigital/react-native-zoomable-view": "^1.1.3",
     "@expo/metro-config": "^0.3.17",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "~0.16.2",
