--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "expo-system-ui": "~1.2.0",
     "expo-web-browser": "~10.2.0",
     "firebase": "^9.8.1",
+    "mapbox-gl": "^2.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-map-gl": "^7.0.15",
     "react-native": "0.68.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.2.4",
