--- a/package.json
+++ b/package.json
@@ -31,17 +31,18 @@
     "expo-system-ui": "~1.2.0",
     "expo-web-browser": "~10.2.0",
     "firebase": "^9.8.1",
-    "mapbox-gl": "^2.8.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-map-gl": "^7.0.15",
     "react-native": "0.68.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "webpack-dev-server": "~3.11.0"
+    "webpack-dev-server": "~3.11.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-maps": "0.30.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
